--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,7 @@ DocProject/Help/*.hhk
 DocProject/Help/*.hhp
 DocProject/Help/Html2
 DocProject/Help/html
+Binaries/
 
 # Click-Once directory
 publish/
