--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -27,6 +27,15 @@
     <ClInclude Include="07. HeightMapDemo.h" />
     <ClInclude Include="08. NormalDemo.h" />
     <ClInclude Include="09. MeshDemo.h" />
+    <ClInclude Include="10. GlobalTestDemo.h" />
+    <ClInclude Include="11. DepthStencilDemo.h" />
+    <ClInclude Include="12. AmbientDemo.h" />
+    <ClInclude Include="13. DiffuseDemo.h" />
+    <ClInclude Include="14. SpecularDemo.h" />
+    <ClInclude Include="15. EmissiveDemo.h" />
+    <ClInclude Include="16. LightingDemo.h" />
+    <ClInclude Include="17. MaterialDemo.h" />
+    <ClInclude Include="18. NormalMappingDemo.h" />
     <ClInclude Include="CameraScript.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="pch.h" />
@@ -41,6 +50,15 @@
     <ClCompile Include="07. HeightMapDemo.cpp" />
     <ClCompile Include="08. NormalDemo.cpp" />
     <ClCompile Include="09. MeshDemo.cpp" />
+    <ClCompile Include="10. GlobalTestDemo.cpp" />
+    <ClCompile Include="11. DepthStencilDemo.cpp" />
+    <ClCompile Include="12. AmbientDemo.cpp" />
+    <ClCompile Include="13. DiffuseDemo.cpp" />
+    <ClCompile Include="14. SpecularDemo.cpp" />
+    <ClCompile Include="15. EmissiveDemo.cpp" />
+    <ClCompile Include="16. LightingDemo.cpp" />
+    <ClCompile Include="17. MaterialDemo.cpp" />
+    <ClCompile Include="18. NormalMappingDemo.cpp" />
     <ClCompile Include="CameraScript.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="pch.cpp">
@@ -50,6 +68,8 @@
     <ClCompile Include="01. TriangleDemo.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="..\Shaders\00. Global.fx" />
+    <FxCompile Include="..\Shaders\00. Light.fx" />
     <FxCompile Include="..\Shaders\01. Triangle.fx">
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
       </EntryPointName>
@@ -66,6 +86,13 @@
     <FxCompile Include="..\Shaders\05. Sampler.fx" />
     <FxCompile Include="..\Shaders\06. Terrain.fx" />
     <FxCompile Include="..\Shaders\07. Normal.fx" />
+    <FxCompile Include="..\Shaders\08. GlobalTest.fx" />
+    <FxCompile Include="..\Shaders\09. Lighting_Ambient.fx" />
+    <FxCompile Include="..\Shaders\10. Lighting_Diffuse.fx" />
+    <FxCompile Include="..\Shaders\11. Lighting_Specular.fx" />
+    <FxCompile Include="..\Shaders\12. Lighting_Emissive.fx" />
+    <FxCompile Include="..\Shaders\13. Lighting.fx" />
+    <FxCompile Include="..\Shaders\14. NormalMapping.fx" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
