--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -19,39 +19,34 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="10. GlobalTestDemo.h" />
-    <ClInclude Include="11. DepthStencilDemo.h" />
-    <ClInclude Include="12. AmbientDemo.h" />
-    <ClInclude Include="13. DiffuseDemo.h" />
-    <ClInclude Include="14. SpecularDemo.h" />
-    <ClInclude Include="15. EmissiveDemo.h" />
-    <ClInclude Include="16. LightingDemo.h" />
-    <ClInclude Include="17. MaterialDemo.h" />
-    <ClInclude Include="18. NormalMappingDemo.h" />
+    <ClInclude Include="AnimInstancingDemo.h" />
     <ClInclude Include="CameraScript.h" />
+    <ClInclude Include="InstancingDemo.h" />
     <ClInclude Include="Main.h" />
+    <ClInclude Include="MeshInstancingDemo.h" />
+    <ClInclude Include="ModelInstancingDemo.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="RenderDemo.h" />
+    <ClInclude Include="SceneDemo.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="10. GlobalTestDemo.cpp" />
-    <ClCompile Include="11. DepthStencilDemo.cpp" />
-    <ClCompile Include="12. AmbientDemo.cpp" />
-    <ClCompile Include="13. DiffuseDemo.cpp" />
-    <ClCompile Include="14. SpecularDemo.cpp" />
-    <ClCompile Include="15. EmissiveDemo.cpp" />
-    <ClCompile Include="16. LightingDemo.cpp" />
-    <ClCompile Include="17. MaterialDemo.cpp" />
-    <ClCompile Include="18. NormalMappingDemo.cpp" />
+    <ClCompile Include="AnimInstancingDemo.cpp" />
     <ClCompile Include="CameraScript.cpp" />
+    <ClCompile Include="InstancingDemo.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MeshInstancingDemo.cpp" />
+    <ClCompile Include="ModelInstancingDemo.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="RenderDemo.cpp" />
+    <ClCompile Include="SceneDemo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="..\Shaders\00. Global.fx" />
     <FxCompile Include="..\Shaders\00. Light.fx" />
+    <FxCompile Include="..\Shaders\00. Render.fx" />
     <FxCompile Include="..\Shaders\01. Triangle.fx">
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
       </EntryPointName>
@@ -79,6 +74,11 @@
     <FxCompile Include="..\Shaders\16. AnimationDemo.fx" />
     <FxCompile Include="..\Shaders\17. TweenDemo.fx" />
     <FxCompile Include="..\Shaders\18. SkyDemo.fx" />
+    <FxCompile Include="..\Shaders\19. InstancingDemo.fx" />
+    <FxCompile Include="..\Shaders\20. MeshInstancingDemo.fx" />
+    <FxCompile Include="..\Shaders\21. ModelInstancingDemo.fx" />
+    <FxCompile Include="..\Shaders\22. AnimInstancingDemo.fx" />
+    <FxCompile Include="..\Shaders\23. RenderDemo.fx" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
