--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -19,29 +19,25 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BillBoardDemo.h" />
+    <ClInclude Include="ButtonDemo.h" />
     <ClInclude Include="CameraScript.h" />
-    <ClInclude Include="GroupDemo.h" />
     <ClInclude Include="Main.h" />
+    <ClInclude Include="OrthographicDemo.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="RawBufferDemo.h" />
-    <ClInclude Include="SceneDemo.h" />
-    <ClInclude Include="StructuredBufferDemo.h" />
-    <ClInclude Include="TextureBufferDemo.h" />
-    <ClInclude Include="ViewportDemo.h" />
+    <ClInclude Include="SnowDemo.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BillBoardDemo.cpp" />
+    <ClCompile Include="ButtonDemo.cpp" />
     <ClCompile Include="CameraScript.cpp" />
-    <ClCompile Include="GroupDemo.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="OrthographicDemo.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="RawBufferDemo.cpp" />
-    <ClCompile Include="SceneDemo.cpp" />
-    <ClCompile Include="StructuredBufferDemo.cpp" />
-    <ClCompile Include="TextureBufferDemo.cpp" />
-    <ClCompile Include="ViewportDemo.cpp" />
+    <ClCompile Include="SnowDemo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="..\Shaders\00. Global.fx" />
@@ -83,6 +79,8 @@
     <FxCompile Include="..\Shaders\25. GroupDemo.fx" />
     <FxCompile Include="..\Shaders\26. TextureBufferDemo.fx" />
     <FxCompile Include="..\Shaders\27. StructuredBufferDemo.fx" />
+    <FxCompile Include="..\Shaders\28. BillBoardDemo.fx" />
+    <FxCompile Include="..\Shaders\29. SnowDemo.fx" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
